Fixed bg spacing on portfolio page

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -48,7 +48,7 @@ a { color: #222; }
 }
 #content .portfolio {
 	top: 106px;
-	height: 1430px;
+	height: 1505px;
 }
 #content .contact {
 	top: 106px;
